<PreferenceScreen
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
            app:title="@string/worker_settings_header">

        <EditTextPreference
                app:key="@string/employee_name_key"
                app:title="@string/employee_name_title"
                app:counterEnabled="true"
                app:useSimpleSummaryProvider="true"/>

    </PreferenceCategory>

    <PreferenceCategory
            app:title="@string/app_settings_header">

        <EditTextPreference
                app:key="@string/server_key"
                app:title="@string/server_url_title"
                app:defaultValue="@string/server_url_default"
                app:useSimpleSummaryProvider="true"/>
        <EditTextPreference
                app:key="@string/server_port_key"
                app:title="@string/server_port_title"
                app:defaultValue="@string/server_port_default"
                app:useSimpleSummaryProvider="true"/>

    </PreferenceCategory>

    <PreferenceCategory
            app:title="@string/local_db_title">

        <EditTextPreference
                app:key="@string/local_db_last_update"
                app:title="@string/local_db_last_update_title"
                app:defaultValue=""
                app:enabled="false"
                app:selectable="false"
                app:shouldDisableView="false"
                app:useSimpleSummaryProvider="true"/>

        <EditTextPreference
                app:key="@string/app_version"
                app:title="@string/app_version_title"
                app:defaultValue=""
                app:enabled="false"
                app:selectable="false"
                app:shouldDisableView="false"
                app:useSimpleSummaryProvider="true"/>

    </PreferenceCategory>

</PreferenceScreen>