<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.FirstFragment">

    <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="48dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="15dp"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintBottom_toBottomOf="parent"
            android:orientation="horizontal"
            app:layout_constraintTop_toTopOf="parent"
            android:id="@+id/radioGroup"
            android:layout_marginTop="100dp"
            app:layout_constraintVertical_bias="0.0">

        <RadioButton android:id="@+id/radio_bluetooth"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/auth_way_radio_button_bluetooth"
                     tools:layout_editor_absoluteY="114dp"
                     app:layout_constraintEnd_toStartOf="@+id/radio_wifi"
                     app:layout_constraintStart_toStartOf="parent"/>

        <RadioButton android:id="@+id/radio_wifi"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/auth_way_radio_button_wifi"
                     tools:layout_editor_absoluteY="114dp"
                     app:layout_constraintEnd_toEndOf="parent"
                     android:layout_marginStart="43dp"
                     app:layout_constraintStart_toEndOf="@+id/radio_bluetooth"/>
    </RadioGroup>

    <Button
            android:id="@+id/button_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/start"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/radioGroup"
            app:layout_constraintBottom_toBottomOf="@+id/textview_result"/>

    <TextView
            android:id="@+id/textview_result"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="15dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            app:layout_constraintTop_toBottomOf="@+id/button_start"
            app:layout_constraintVertical_bias="0.2"
            app:layout_constraintBottom_toBottomOf="@+id/button_view"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    <Button
            android:id="@+id/button_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/view"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textview_result"/>

</androidx.constraintlayout.widget.ConstraintLayout>